- Separate ActionManager from pdController
- Add more unit tests for PDAnalyst and ActionManager